--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=development
 APP_PORT=3000
 
-DATABASE_URL="mysql://root:root@localhost:3306/knowledge_base"
+DATABASE_URL="mysql://root:root@mysql:3306/knowledge_base"
 
 JWT_SECRET="your-super-secret-and-long-string-for-jwt"
